# onlineCAL

./: .gitignore  .pre-commit-config.yaml  .tool-versions  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  pre-commit.yml
server/: .env.example  db.conf.example  docker-compose.yaml  manage.py
server/auth/: __init__.py  forms.py  urls.py
server/booking_portal/: apps.py  config.py  factories.py  mail.py  permissions.py  urls.py
server/booking_portal/admin/: __init__.py  announcement.py  balance_top_up_log.py  email.py  instrument.py  pricing_rules.py  request.py  slot.py
server/booking_portal/forms/: __init__.py  admin.py  fields.py  portal.py
server/booking_portal/migrations/: 0001_initial.py  0002_auto_20201223_1559.py  0003_auto_20201223_1632.py  0004_userdetail_duration.py  0005_instrument_status.py  0006_auto_20201230_0252.py  0007_auto_20201230_0255.py  0008_userdetail_phone_number.py  0009_hplc_fd.py  0010_auto_20210123_2303.py  0011_userdetail_number_of_samples.py  0012_auto_20210207_1038.py  0013_utm.py  0014_alter_utm_temperature.py  0015_auto_20210926_1137.py  0016_auto_20210929_1021.py  0017_alter_utm_test_speed.py  0018_alter_utm_test_speed.py  0019_saxs_waxs.py  0020_alter_faculty_customuser_ptr_and_more.py  0021_facultyrequest.py  0021_vsm.py  0022_epr_esr.py  0022_remove_userdetail_user_name_userdetail_content_type_and_more.py  0023_gpc.py  0024_chns.py  0025_rt_pcr.py  0026_quantachrome.py  0027_dls.py  0028_bdfacs.py  0029_contactangle.py  0030_digitalpolarimeter.py  0031_fluorolog3.py  0032_fluoromax.py  0033_spectrafluorimeter.py  0034_ultracentrifuge_alter_spectrafluorimeter_options.py  0035_department_faculty_balance_alter_faculty_department.py  0035_instrument_cost_per_sample.py  0036_alter_department_options_request_department_and_more.py  0036_faculty_balance.py  (+36 more)
server/booking_portal/models/: __init__.py  department.py  email.py  faculty_request.py  manager.py  request.py  slot.py  user.py
server/booking_portal/templatetags/: custom_crispy_forms_field.py  query_utils.py  (+1 more)
server/onlineCAL/: settings.py  urls.py  views.py  wsgi.py
server/templates/: about_us.html  announcements.html  base.html  base_card_content.html  email.html  guidelines.html  home.html  instrument_form_base.html  profile.html
(+106 files in other folders)
