[tool.poetry]
name = "online-CAL"
version = "0.1.0"
description = ""
authors = ["Ujjwal Raizada <ujjwalraizada@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
django = "^4.2.0"
django-filter = "~2.4.0"
django-admin-rangefilter = "~0.6.3"
python-dotenv = "~0.15.0"
django-crispy-forms = "~1.11.0"
factory-boy = "^3.2.0"
django-q = "^1.3.9"
mysqlclient = "^2.1.0"
setuptools = "^69.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
coverage = "~5.5"
isort = "^5.9.3"
flake8 = "^7.0.0"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
