[tool.poetry]
name = "online-CAL"
version = "0.1.0"
description = ""
authors = ["Ujjwal Raizada <ujjwalraizada@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
django = "^4.2.0"
django-filter = "~2.4.0"
django-admin-rangefilter = "~0.6.3"
python-dotenv = "~0.15.0"
django-crispy-forms = "~1.11.0"
factory-boy = "^3.2.0"
django-q = "^1.3.9"
mysqlclient = "^2.1.0"
setuptools = "^69.0.3"
pre-commit = "^4.0.1"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
autopep8 = "^1.5.4"
coverage = "~5.5"
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
