[project]
name = "online-CAL"
version = "0.1.0"
description = "An online portal to manage CAL BPHC's instrument booking process"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "django>=4.2.0,<5",
    "django-filter~=2.4.0",
    "django-admin-rangefilter~=0.6.3",
    "python-dotenv~=0.15.0",
    "django-crispy-forms~=1.11.0",
    "factory-boy>=3.2.0,<4",
    "django-q>=1.3.9,<2",
    "mysqlclient>=2.1.0,<3",
    "setuptools>=69.0.3,<70",
    "pre-commit>=4.0.1,<5",
    "gunicorn>=23.0.0,<24",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"server/booking_portal/config.py" = ["F403", "F405"]
